--- a/assets/styles/wordofday.css
+++ b/assets/styles/wordofday.css
@@ -35,7 +35,7 @@ body{
 
 @media (min-width: 700px) {
     #wordofdaycontainer{
-        margin-left: 16px;
+        margin-left: 12px;
     }
 }
 
